@@ -206,8 +206,8 @@
 			
 			<!--OK / Cancel-->
 			<control type="panel" id="9001">
-				<posx>12-col</posx>
-				<posy>2-row</posy>
+				<posx>876</posx>
+				<posy>110</posy>
 				<width>4-col</width>
 				<height>5-row</height>
 				<itemgap>0</itemgap>
