@@ -10,14 +10,14 @@
 
 		<control type="group">
 													
-			<posx>col-19-begin</posx>
+			<posx>col-19-begin</posx>			
 			<posy>83</posy>
 			
 			<!--animations-->
 			<animation type="Windowclose">
 				<effect type="fade" start="100" end="0" time="400" tween="sine" />
 			</animation>
-			
+						
 			<control type="image">
 				<posx>0</posx>
 				<posy>-12</posy>
