@@ -175,15 +175,5 @@
 			<visible>Skin.HasSetting(DebugGrid)</visible>
 		</control>
 	</include>
-	
-	<!--to be removed-->	
-	<include name="noOffset"><posy>366</posy></include>
-	<include name="offset1"><posy>410</posy></include>
-	<include name="offset2"><posy>454</posy></include>
-	<include name="offset3"><posy>496</posy></include>
-	<include name="offset4"><posy>538</posy></include>
-	<include name="offset5"><posy>582</posy></include>
-	<include name="offset6"><posy>626</posy></include>
-	<include name="offset7"><posy>670</posy></include>
 			
 </includes>
