@@ -73,7 +73,7 @@
 				<onleft>9000</onleft>
 				<onright>5</onright>
 				<onup>3</onup>
-				<ondown>3</ondown>
+				<ondown>20</ondown>
 				<orientation>vertical</orientation>
 			</control>
 					
@@ -123,7 +123,39 @@
 				<texturefocus>colors/selected.png</texturefocus>
 				<textoffsetx>12</textoffsetx>
 				<textoffsety>8</textoffsety>
-			</control>		
+			</control>
+			
+			<!--settings level button (Gotham only)-->
+			<control type="group">
+				<visible>SubString(System.BuildVersion,13,left)</visible>
+				
+				<control type="label">
+					<posx>12</posx>
+					<posy>11-row</posy>
+					<width>4-col</width>
+					<font>smallMedium</font>
+					<label>30356</label>
+					<textcolor>selected</textcolor>
+					<shadowcolor>-</shadowcolor>
+				</control>
+			
+				<control type="button" id="20">
+					<posx>0</posx>
+					<posy>672</posy>
+					<align>left</align>
+					<aligny>top</aligny>
+					<height>54</height>
+					<font>menuTitle</font>
+					<label>10037</label>
+					<textcolor>selected</textcolor>
+					<focusedcolor>black</focusedcolor>
+					<texturefocus>colors/selected.png</texturefocus>
+					<textoffsetx>12</textoffsetx>
+					<textoffsety>8</textoffsety>
+					<onclick>SettingsLevelChange</onclick>
+					<onup>3</onup>
+				</control>	
+			</control>	
 			
 		</control>
 
