@@ -132,11 +132,13 @@
 					</focusedlayout>
 
 					<content>
+						<!--
 						<item id="1">
 							<label>30344</label>
 							<thumb>-</thumb>
 							<onclick>action(aspectratio)</onclick>
 						</item>
+						-->
 						<item id="2">
 							<label>292</label>
 							<thumb>-</thumb>
