@@ -631,6 +631,18 @@
 							<bordersize>0</bordersize>
 							<colordiffuse>99FFFFFF</colordiffuse>
 						</control>
+						
+						<control type="image">
+							<visible>ListItem.IsPlaying</visible>
+							<posx>0</posx>
+							<posy>2</posy>
+							<width>21-col</width>
+							<height>53</height>
+							<aspectratio>stretch</aspectratio>
+							<texture border="24,0,24,0">UIControls/listitemFO.png</texture>
+							<bordersize>0</bordersize>
+							<colordiffuse>66FFFFFF</colordiffuse>
+						</control>
 
 						<control type="image">
 							<posx>4</posx>
@@ -675,9 +687,19 @@
 							<label>$INFO[listitem.duration]</label>
 						</control>
 						
+						<control type="image">
+							<visible>ListItem.IsPlaying</visible>
+							<posx>52r</posx>
+							<posy>4</posy>
+							<width>48</width>
+							<height>48</height>
+							<aspectratio scalediffuse="false">scale</aspectratio>
+							<texture diffuse="masks/circle.png" border="0">colors/offblack.png</texture>
+						</control>
+						
 						<control type="label">
 							<visible>ListItem.IsPlaying</visible>
-							<posx>48r</posx>
+							<posx>36r</posx>
 							<posy>0</posy>
 							<width>10-col-gutter</width>
 							<font>symbol</font>
@@ -701,7 +723,7 @@
 							<bordersize>0</bordersize>
 							<colordiffuse>FFFFFFFF</colordiffuse>
 						</control>
-
+						
 						<control type="image">
 							<posx>4</posx>
 							<posy>4</posy>
@@ -748,14 +770,24 @@
 							<label>$INFO[listitem.duration]</label>
 						</control>
 						
+						<control type="image">
+							<visible>ListItem.IsPlaying</visible>
+							<posx>52r</posx>
+							<posy>4</posy>
+							<width>48</width>
+							<height>48</height>
+							<aspectratio scalediffuse="false">scale</aspectratio>
+							<texture diffuse="masks/circle.png" border="0">colors/offblack.png</texture>
+						</control>
+						
 						<control type="label">
 							<visible>ListItem.IsPlaying</visible>
-							<posx>48r</posx>
+							<posx>36r</posx>
 							<posy>0</posy>
 							<width>10-col-gutter</width>
 							<font>symbol</font>
-							<textcolor>black</textcolor>
-							<selectedcolor>black</selectedcolor>
+							<textcolor>selected</textcolor>
+							<selectedcolor>selected</selectedcolor>
 							<shadowcolor>-</shadowcolor>
 							<label></label>
 						</control>
