@@ -58,6 +58,20 @@
 						<label>$INFO[ListItem.starttime]</label>
 					</control>
 
+					<control type="image">
+						<visible>ListItem.HasTimer</visible>
+						<posx>438</posx>
+						<posy>2</posy>
+						<width>414</width>
+						<height>53</height>
+						<aspectratio>stretch</aspectratio>
+						<texture border="0">colors/selected.png</texture>
+						<bordertexture border="6">colors/black.png</bordertexture>
+						<bordersize>0,0,6,0</bordersize>
+						<colordiffuse>99FFFFFF</colordiffuse>
+						<animation effect="fade" start="75" end="100" time="1500" tween="sine" easing="in" pulse="true" condition="true">Conditional</animation>
+					</control>
+					
 					<control type="label">
 						<posx>444</posx>
 						<posy>0</posy>
@@ -78,6 +92,20 @@
 						<label>$INFO[ListItem.nextstarttime]</label>
 					</control>
 
+					<control type="image">
+						<visible>ListItem.HasTimer</visible>
+						<posx>942</posx>
+						<posy>2</posy>
+						<width>414</width>
+						<height>53</height>
+						<aspectratio>stretch</aspectratio>
+						<texture border="0">colors/selected.png</texture>
+						<bordertexture border="6">colors/black.png</bordertexture>
+						<bordersize>0,0,6,0</bordersize>
+						<colordiffuse>99FFFFFF</colordiffuse>
+						<animation effect="fade" start="75" end="100" time="1500" tween="sine" easing="in" pulse="true" condition="true">Conditional</animation>
+					</control>
+					
 					<control type="label">
 						<posx>948</posx>
 						<posy>0</posy>
@@ -396,7 +424,7 @@
 				<posy>-56</posy>
 				<width>21-col</width>
 				<height>11-row</height>
-				<progresstexture border="0,32,18,14">UIControls/PVR-EpgProgressIndicator.png</progresstexture>
+				<progresstexture border="0,33,18,14">UIControls/PVR-EpgProgressIndicator.png</progresstexture>
 				<timeblocks>40</timeblocks>
 				<rulerunit>12</rulerunit>
 				<onleft>9000</onleft>
