@@ -59,6 +59,7 @@
 	<string id="30351">Current Playlist</string>
 	<string id="30354">Search Library</string>
 	<string id="30355">Aspect Ratio</string>
+	<string id="30356">Settings level</string>
 	
 	<string id="30357">HD</string>
 	<string id="30358">SD</string>
