@@ -2,6 +2,8 @@
 - [MODIFIED] Various PVR tweaking
 - [NEW] Music / video scan progress indicator (thanks zznh)
 - [NEW] View current music playlist (accessible from options menu in music section)
+- [MODIFIED] Music visualisation background reworked. Track progress indicator reinstated (thanks bigpen15crew)
+- [NEW] Settings level indicator for Gotham builds
 - Various tweaks and bugfixes
 
 [B]0.9.0[/B]
